tests/snapshots/run_wpt_conformance__coreml_identity_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "identity.https.any.js",
    "identity float16 0D scalar",
    "coreml",
    "PASS",
)
